Lexical Analyzer & Syntax Analyzer/y.output
Terminals unused in grammar

   CONTINUE
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   DO
   BREAK
   CHAR
   COLON
   GOTO


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 arguments: arguments COMMA logic_expression
   13          | logic_expression

   14 compound_statement: LCURL statements RCURL
   15                   | LCURL RCURL

   16 var_declaration: type_specifier declaration_list SEMICOLON

   17 type_specifier: INT
   18               | FLOAT
   19               | VOID

   20 declaration_list: declaration_list COMMA ID
   21                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | ID
   23                 | ID LTHIRD CONST_INT RTHIRD

   24 statements: statement
   25           | statements statement

   26 statement: var_declaration
   27          | expression_statement
   28          | compound_statement
   29          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement ELSE statement
   32          | WHILE LPAREN expression RPAREN statement
   33          | PRINTF LPAREN ID RPAREN SEMICOLON
   34          | RETURN expression SEMICOLON

   35 factor: variable
   36       | ID LPAREN argument_list RPAREN
   37       | LPAREN expression RPAREN
   38       | CONST_INT
   39       | CONST_FLOAT
   40       | variable INCOP
   41       | variable DECOP

   42 expression_statement: SEMICOLON
   43                     | expression SEMICOLON

   44 variable: ID
   45         | ID LTHIRD expression RTHIRD

   46 expression: logic_expression
   47           | variable ASSIGNOP logic_expression

   48 logic_expression: rel_expression
   49                 | rel_expression LOGICOP rel_expression

   50 rel_expression: simple_expression
   51               | simple_expression RELOP simple_expression

   52 simple_expression: term
   53                  | simple_expression ADDOP term

   54 term: unary_expression
   55     | term MULOP unary_expression

   56 unary_expression: ADDOP unary_expression
   57                 | NOT unary_expression
   58                 | factor

   59 argument_list: arguments


Terminals, with rules where they appear

$end (0) 0
error (256)
CONTINUE (258)
RETURN (259) 34
DOUBLE (260)
SWITCH (261)
CASE (262)
DEFAULT (263)
PRINTF (264) 33
ADDOP (265) 53 56
MULOP (266) 55
RELOP (267) 51
ASSIGNOP (268) 47
LOGICOP (269) 49
INT (270) 17
FLOAT (271) 18
LPAREN (272) 6 7 29 30 31 32 33 36 37
RPAREN (273) 6 7 29 30 31 32 33 36 37
LCURL (274) 14 15
RCURL (275) 14 15
LTHIRD (276) 21 23 45
RTHIRD (277) 21 23 45
IF (278) 30 31
ELSE (279) 31
FOR (280) 29
WHILE (281) 32
DO (282)
BREAK (283)
CONST_INT (284) 21 23 38
CONST_FLOAT (285) 39
INCOP (286) 40
DECOP (287) 41
CHAR (288)
VOID (289) 19
NOT (290) 57
SEMICOLON (291) 16 33 34 42 43
COMMA (292) 8 9 12 20 21
COLON (293)
ID (294) 6 7 8 10 20 21 22 23 33 36 44 45
GOTO (295)
LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
start (43)
    on left: 1, on right: 0
program (44)
    on left: 2 3, on right: 1 2
unit (45)
    on left: 4 5, on right: 2 3
func_definition (46)
    on left: 6 7, on right: 5
parameter_list (47)
    on left: 8 9 10 11, on right: 6 8 9
arguments (48)
    on left: 12 13, on right: 12 59
compound_statement (49)
    on left: 14 15, on right: 6 7 28
var_declaration (50)
    on left: 16, on right: 4 26
type_specifier (51)
    on left: 17 18 19, on right: 6 7 8 9 10 11 16
declaration_list (52)
    on left: 20 21 22 23, on right: 16 20 21
statements (53)
    on left: 24 25, on right: 14 25
statement (54)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 25 29 30 31 32
factor (55)
    on left: 35 36 37 38 39 40 41, on right: 58
expression_statement (56)
    on left: 42 43, on right: 27 29
variable (57)
    on left: 44 45, on right: 35 40 41 47
expression (58)
    on left: 46 47, on right: 29 30 31 32 34 37 43 45
logic_expression (59)
    on left: 48 49, on right: 12 13 46 47
rel_expression (60)
    on left: 50 51, on right: 48 49
simple_expression (61)
    on left: 52 53, on right: 50 51 53
term (62)
    on left: 54 55, on right: 52 53 55
unary_expression (63)
    on left: 56 57 58, on right: 54 55 56 57
argument_list (64)
    on left: 59, on right: 36


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   17 type_specifier: INT .

    $default  reduce using rule 17 (type_specifier)


State 2

   18 type_specifier: FLOAT .

    $default  reduce using rule 18 (type_specifier)


State 3

   19 type_specifier: VOID .

    $default  reduce using rule 19 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   16 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 22 (declaration_list)


State 13

   16 var_declaration: type_specifier declaration_list . SEMICOLON
   20 declaration_list: declaration_list . COMMA ID
   21                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    RPAREN  shift, and go to state 18
    VOID    shift, and go to state 3

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   23 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   16 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 16 (var_declaration)


State 17

   20 declaration_list: declaration_list COMMA . ID
   21                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   23 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   20 declaration_list: declaration_list COMMA ID .
   21                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 20 (declaration_list)


State 23

   14 compound_statement: LCURL . statements RCURL
   15                   | LCURL . RCURL

    RETURN       shift, and go to state 30
    PRINTF       shift, and go to state 31
    ADDOP        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    LPAREN       shift, and go to state 33
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 34
    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    WHILE        shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    VOID         shift, and go to state 3
    NOT          shift, and go to state 40
    SEMICOLON    shift, and go to state 41
    ID           shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    factor                go to state 48
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   23 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 29

   21 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   34 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 32
    LPAREN       shift, and go to state 33
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    NOT          shift, and go to state 40
    ID           shift, and go to state 42

    factor             go to state 48
    variable           go to state 50
    expression         go to state 60
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56


State 31

   33 statement: PRINTF . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 61


State 32

   56 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 32
    LPAREN       shift, and go to state 33
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    NOT          shift, and go to state 40
    ID           shift, and go to state 42

    factor            go to state 48
    variable          go to state 62
    unary_expression  go to state 63


State 33

   37 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 32
    LPAREN       shift, and go to state 33
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    NOT          shift, and go to state 40
    ID           shift, and go to state 42

    factor             go to state 48
    variable           go to state 50
    expression         go to state 64
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56


State 34

   15 compound_statement: LCURL RCURL .

    $default  reduce using rule 15 (compound_statement)


State 35

   30 statement: IF . LPAREN expression RPAREN statement
   31          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 65


State 36

   29 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 66


State 37

   32 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 67


State 38

   38 factor: CONST_INT .

    $default  reduce using rule 38 (factor)


State 39

   39 factor: CONST_FLOAT .

    $default  reduce using rule 39 (factor)


State 40

   57 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 32
    LPAREN       shift, and go to state 33
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    NOT          shift, and go to state 40
    ID           shift, and go to state 42

    factor            go to state 48
    variable          go to state 62
    unary_expression  go to state 68


State 41

   42 expression_statement: SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 42

   36 factor: ID . LPAREN argument_list RPAREN
   44 variable: ID .
   45         | ID . LTHIRD expression RTHIRD

    LPAREN  shift, and go to state 69
    LTHIRD  shift, and go to state 70

    $default  reduce using rule 44 (variable)


State 43

   28 statement: compound_statement .

    $default  reduce using rule 28 (statement)


State 44

   26 statement: var_declaration .

    $default  reduce using rule 26 (statement)


State 45

   16 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 46

   14 compound_statement: LCURL statements . RCURL
   25 statements: statements . statement

    RETURN       shift, and go to state 30
    PRINTF       shift, and go to state 31
    ADDOP        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    LPAREN       shift, and go to state 33
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    WHILE        shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    VOID         shift, and go to state 3
    NOT          shift, and go to state 40
    SEMICOLON    shift, and go to state 41
    ID           shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 73
    factor                go to state 48
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56


State 47
